--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded="" arjs="trackingMethod: best;">
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='katherinepattern.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/katherinepattern.patt'></a-marker-camera>
 <a-camera-static></a-camera-static>
 </a-scene>
-
 
