--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <a-scene embedded="" arjs="trackingMethod: best;">
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'></a-marker-camera>
+  
+<a-box position='0 0.5 0' material='red: 0.5;'></a-box>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB1.patt'></a-marker-camera>
+  
+
 <a-camera-static></a-camera-static>
 </a-scene>
 
