--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'></a-marker-camera>
   
-<a-box position='0 0.5 0' material='color: red;'></a-box>
+<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB1.patt'></a-marker-camera>
   
 
