--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB1.patt'></a-marker-camera>
   
-
+<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB2.patt'></a-marker-camera>
+  
+<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB3.patt'></a-marker-camera>
+  
+<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB4.patt'></a-marker-camera>
+  
+<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5.patt'></a-marker-camera>
+  
 <a-camera-static></a-camera-static>
 </a-scene>
 
