--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB1.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB2.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/Marker B_2.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB3.patt'></a-marker-camera>
