--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerB1.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB1.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/Marker B_2.patt'></a-marker-camera>
