--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB4.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5240.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5240B.patt'></a-marker-camera>
   
 <a-camera-static></a-camera-static>
 </a-scene>
