--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'></a-marker-camera>
   
-<a-box position='0 0.5 0' material='color: red;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/Marker55240B.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/Marker55240B.patt'>
+  <a-box position='0 0.5 0' material='color: red;'></a-box>
+  </a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/Marker B_2.patt'></a-marker-camera>
