--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <a-box position='0 0.5 0' material='color: red;'></a-box>
     </a-marker>
   
-<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'></a-marker-camera>
+
+<a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'><a-box position='0 0.5 0' material='opacity: 0.5;'></a-box></a-marker-camera>
   
 
   
