--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </a-marker>
   
 
-<a-marker-camera preset='custom' type='pattern' url='Markers/TestMarkerB.patt'><a-box position='0 0.5 0' material='opacity: 0.5;'></a-box></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5.patt'><a-box position='0 0.5 0' material='opacity: 0.5;'></a-box></a-marker-camera>
   
 
   
