--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <script src="js/aframe-ar.js"></script>
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-
-<a-marker type='pattern' url='Markers/Marker55240B.patt'>
-      <a-box position='0 0.5 0' material='color: red;'></a-box>
-    </a-marker>
   
 
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5.patt'><a-box position='0 0.5 0' material='opacity: 0.5;'></a-box></a-marker-camera>
@@ -13,7 +9,7 @@
 
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='Markers/Marker B_2.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerC1.patt'></a-marker-camera>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB3.patt'></a-marker-camera>
