--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <a-marker-camera preset='custom' type='pattern' url='Markers/MarkerB5.patt'><a-box position='0 0.5 0' material='opacity: 0.5;'></a-box></a-marker-camera>
   
-
+        <a-marker type='barcode' value='7'>
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 <a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD1.patt'></a-marker-camera>
