--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD7.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerC2.patt></a-marker-camera>
   
 
   
