--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="js/aframe.min.js"></script>
 <script src="js/aframe-ar.js"></script>
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
-<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
   
 
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
