--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
   
+<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore3.gltf" scale="1 1 1"></a->
 
-<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
   <a-marker-camera preset='hiro'></a-marker-camera>
 
 <a-camera-static></a-camera-static>
