--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
   
 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD4.patt'></a-marker-camera>
+<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerD4.patt'></a-marker-camera>
 
 <a-camera-static></a-camera-static>
 </a-scene>
