--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <script src="js/aframe-ar.js"></script>
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-  
-<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-<a-marker-camera preset='custom' type='pattern' url='Markers/MarkerD4.patt'></a-marker-camera>
+
+<a-marker  preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD4.patt' >
+        <a-box color="red"></a-box></a-marker>
 
 <a-camera-static></a-camera-static>
 </a-scene>
