--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-<a-marker  preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD4.patt' >
+<a-marker  preset='custom' type='pattern'  url='Markers/MarkerD4.patt' >
         <a-box color="red"></a-box></a-marker>
 
 <a-camera-static></a-camera-static>
