--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <script src="js/aframe-ar.js"></script>
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-
+</head>
+<body style='margin : 0px; overflow: hidden;'>
 <a-marker  preset='custom' type='pattern'  url='Markers/MarkerD4.patt' >
         <a-box color="red"></a-box></a-marker>
 
 <a-camera-static></a-camera-static>
 </a-scene>
-
+</body>
+</html>
