--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <script src="js/aframe.min.js"></script>
 <script src="js/aframe-ar.js"></script>
 <script src="https://raw.githubusercontent.com/donmccurdy/aframe-extras/master/src/loaders/animation-mixer.js"></script>
