--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <a-marker  preset='custom' type='pattern'  url='Markers/MarkerD4.patt' >
         <a-box color="red"></a-box></a-marker>
 
+<a-marker  preset='custom' type='pattern'  url='Markers/MarkerD7.patt' >
+        <a-box color="blue"></a-box></a-marker>
+        
 <a-camera-static></a-camera-static>
 </a-scene>
 </body>
