--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <a-marker  preset='custom' type='pattern'  url='Markers/MarkerD7.patt' >
         <a-box color="blue"></a-box></a-marker>
         
+<a-marker  preset='hiro'>
+        <a-box color="green"></a-box></a-marker>
+
 <a-camera-static></a-camera-static>
 </a-scene>
 </body>
