--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerD4.patt' >
         <a-box color="red"></a-box></a-marker>
 
-<a-camera-static></a-camera-static>
+<a-entity camera></a-entity>
 </a-scene>
 </body>
 </html>
