--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-marker-camera preset='hiro'></a-marker-camera>
+<a-marker preset='hiro'>
         <a-box color="red"></a-box></a-marker>
 
 <a-entity camera></a-entity>
