--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-marker preset='custom' type='pattern'  url='MarkerS1255.patt' >
-        <a-box color="red"></a-box></a-marker>
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
+        <a-box color="red"></a-box></a-marker-camera>
 <a-entity camera></a-entity>
 </a-scene>
 </body>
