Added S2240 Marker with green box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         <a-box color="red"></a-box></a-marker-camera>
+
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS2240.patt' >
+        <a-box color="green"></a-box></a-marker-camera>
+        
 <a-entity camera></a-entity>
 </a-scene>
 </body>
