--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-box color="green"></a-box></a-marker-camera>
         
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS3240.patt' >
-        <a-box color="green"></a-box></a-marker-camera>        
+        <a-box color="blue"></a-box></a-marker-camera>        
 
 <a-entity camera></a-entity>
 </a-scene>
