--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
         <a-box color="blue"></a-box></a-marker-camera>        
 
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS5240.patt' >
+        <a-box color="yellow"></a-box></a-marker-camera> 
+        
 <a-entity camera></a-entity>
 </a-scene>
 </body>
