--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+   <a-assets>
+    <a-asset-item id="spore3" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_3/scene.gltf" crossOrigin="anonymous"></a-asset-item> 
+  </a-assets>
+  <a-gltf-model src="#spore3"></a-gltf-model>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
-        <a-box color="red"></a-box></a-marker-camera>
+
 
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt' >
         <a-box color="green"></a-box></a-marker-camera>
