--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_3/scene.gltf"></a-gltf-model>
+<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore3.gltf"></a-gltf-model>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         
 <a-entity camera></a-entity>
