--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/scene.gltf"></a-gltf-model>
+<a-assets>
+                        <a-asset-item id="spore3-obj" src="spore_3_scaled.obj"></a-asset-item>
+                        <a-asset-item id="spore3-mtl" src="spore_3_scaled.mtl"></a-asset-item>
+                </a-assets>
+                <!-- Using the asset management system. -->
+                <a-entity obj-model="obj: #spore3-obj; mtl: #spore3-mtl"></a-entity>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         
 <a-entity camera></a-entity>
