--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 <a-assets>
-                        <a-asset-item id="spore3-obj" src="spore_3_scaled.obj"></a-asset-item>
-                        <a-asset-item id="spore3-mtl" src="spore_3_scaled.mtl"></a-asset-item>
+                        <a-asset-item id="spore3-obj" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore%203_Scaled.obj"></a-asset-item>
+                        <a-asset-item id="spore3-mtl" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore_3_Scaled.mtl"></a-asset-item>
                 </a-assets>
                 <!-- Using the asset management system. -->
                 <a-entity obj-model="obj: #spore3-obj; mtl: #spore3-mtl"></a-entity>
