--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                         <a-asset-item id="spore3-mtl" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore_3_Scaled.mtl"></a-asset-item>
                 </a-assets>
                 <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #spore3-obj; mtl: #spore3-mtl"></a-entity>
+                <a-entity obj-model="obj: #spore3-obj; mtl: #spore3-mtl" scale="0.2 0.2 0.2></a-entity>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         
 <a-entity camera></a-entity>
