--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-assets>
-                        <a-asset-item id="spore3-obj" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore%203_Scaled.obj"></a-asset-item>
-                        <a-asset-item id="spore3-mtl" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Spore_3_Scaled.mtl"></a-asset-item>
-                </a-assets>
-                <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #spore3-obj; mtl: #spore3-mtl" scale="0.2 0.2 0.2></a-entity>
+
+  <a-assets>
+    <a-asset-item id="spore3" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/scene.gltf"></a-asset-item>
+  </a-assets>  
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         
 <a-entity camera></a-entity>
