--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <html>
-<head>
 <script src="js/aframe.min.js"></script>
 <script src="js/aframe-ar.js"></script>
-</head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-  <a-assets>
-    <a-asset-item id="spore3" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/scene.gltf"></a-asset-item>
-  </a-assets>  
+<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/scene.gltf"></a-gltf-model> 
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
         
 <a-entity camera></a-entity>
