--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/scene.gltf" scale="0.5 0.5 0.5"></a-gltf-model> 
+<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore2/scene.gltf" scale="0.5 0.5 0.5"></a-gltf-model> 
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
      
 <a-entity camera></a-entity>
