--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
-<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-gltf-model> 
 
+<a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf" scale="0.5 0.5 0.5"></a-gltf-model> 
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
      
 <a-entity camera></a-entity>
 </a-scene>
