--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-gltf-model> 
-<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
+<a-marker-camera preset="custom" type="pattern"  url="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt" >
      
 <a-entity camera></a-entity>
 </a-scene>
