--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
-<a-entity gltf-model="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-entity>
+<a-entity gltf-model="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-entity>
 <a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
      
 <a-entity camera></a-entity>
