fixed empty parameter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
 <a-entity gltf-model="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/kirk_serrated_projectile_point_2101a404-1/scene.gltf"></a-entity>
-<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' ></a-marker-camera>
      
 <a-entity camera></a-entity>
 </a-scene>
