--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <script src="js/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-
-<a-entity gltf-model="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/kirk_serrated_projectile_point_2101a404-1/scene.gltf"></a-entity>
-<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' ></a-marker-camera>
+<a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-gltf-model>
+<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt'></a-marker-camera>
      
 <a-entity camera></a-entity>
 </a-scene>
