--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <script src="js/aframe.min.js"></script>
 <script src="js/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded="" arjs="trackingMethod: best; debugUIEnabled: false;">
-<a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-gltf-model>
-<a-marker-camera preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt'></a-marker-camera>
-     
-<a-entity camera></a-entity>
+<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
+        <a-box color="red"></a-box></a-marker>
+     <a-entity camera></a-entity>
 </a-scene>
 </body>
 </html>
