--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 <a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf scale="0.10 0.10 0.10""></a-gltf-model>
 <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
+        <a-box color="yellow"></a-box></a-marker> 
      <a-entity camera></a-entity>
 </a-scene>
 </body>
