--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <html>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+<script src="js/aframe.min.js"></script>
+<script src="js/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 
+  <a-assets>
+    <a-asset-item id="spore2" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-asset-item>
+  </a-assets>
+
+  <a-entity gltf-model="#spore2"></a-entity>
 <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
-        <a-box color="yellow"></a-box></a-marker> 
-     <a-entity camera></a-entity>
+   
+ 
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
+        <a-box color="yellow"></a-box></a-marker>     
+     
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS6240.patt' >
+        <a-box color="blue"></a-box></a-marker>         
+
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS9240.patt' >
+<a-box color="green"></a-box></a-marker>    
+
+ <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt' >
+        <a-box color="white"></a-box></a-marker>    
+     
+<a-entity camera></a-entity>
 </a-scene>
 </body>
 </html>
