--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <script src="js/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-
+<a-assets>
+    <a-asset-item id="mymodel" src="./models/myModel.gltf"></a-asset-item>
+  </a-assets>
+  <a-marker type='pattern' url='../../data/data/patt.hiro' size='1'>
+    <a-entity scale="0.08 0.08 0.08">
+      
+      
   <a-assets>
-    <a-asset-item id="spore2" src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-asset-item>
+    <a-asset-item id="spore2" src="./master/spore_2_attempt_1/scene.gltf"></a-asset-item>
   </a-assets>
 
-  <a-entity gltf-model="#spore2"></a-entity>
 <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
-   
+     <a-entity gltf-model="#spore2"></a-entity>
  
 <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
         <a-box color="yellow"></a-box></a-marker>     
