--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
-
-<script src="https://raw.githubusercontent.com/mattGraphics/mattGraphics.github.io/master/js/aframe.min.js"></script>
-<script src="https://raw.githubusercontent.com/mattGraphics/mattGraphics.github.io/master/js/aframe-ar.js"></script>
+<script src="js/aframe.min.js"></script>
+<script src="js/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-<a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-gltf-model>
-<a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' ></a-marker>
-<a-camera-static></a-camera-static>
-</a-scene>
 
+
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
+        <a-box color="red"></a-box></a-marker>
+ 
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
+        <a-box color="yellow"></a-box></a-marker>     
+     
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS6240.patt' >
+        <a-box color="blue"></a-box></a-marker>         
+
+<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS9240.patt' >
+<a-box color="green"></a-box></a-marker>    
+
+ <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt' >
+        <a-box color="white"></a-box></a-marker>    
+     
+<a-entity camera></a-entity>
+</a-scene>
 </body>
 </html>
