--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
-<html>
-<script src="js/aframe.min.js"></script>
-<script src="js/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-
-
-<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' >
-        <a-box color="red"></a-box></a-marker>
- 
-<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' >
-        <a-box color="yellow"></a-box></a-marker>     
-     
-<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS6240.patt' >
-        <a-box color="blue"></a-box></a-marker>         
-
-<a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS9240.patt' >
-<a-box color="green"></a-box></a-marker>    
-
- <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt' >
-        <a-box color="white"></a-box></a-marker>    
-     
-<a-entity camera></a-entity>
-</a-scene>
+    <a-scene embedded arjs='trackingMethod: best;'>
+      <a-gltf-model src="https://rawgit.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"></a-gltf-model>
+      <a-marker-camera preset='hiro'></a-marker-camera>
+      <a-camera-static/>
+    </a-scene>
 </body>
-</html>
