--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-gltf-model>
+      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf" scale="0.08 0.08 0.08"></a-gltf-model>
       <a-marker-camera preset='hiro'></a-marker-camera>
       <a-camera-static/>
     </a-scene>
