--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style='margin : 0px; overflow: hidden;'>
     <<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
       <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-gltf-model>
-      <a-marker-camera preset='hiro'></a-marker-camera>
+      <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' ></a-marker-camera>
     <a-entity scale="0.05 0.05 0.05">
       <a-camera-static/>
     </a-scene>
