--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf"></a-gltf-model>
       <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS1240.patt' ></a-marker-camera>
     <a-entity scale="0.01 0.01 0.01">
+        
+      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_3_a3/scene.gltf"></a-gltf-model>
+      <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' ></a-marker-camera>
+    <a-entity scale="0.01 0.01 0.01">
+        
       <a-camera-static/>
     </a-scene>
 </body>
