--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt' ></a-marker-camera>
     <a-entity scale="0.01 0.01 0.01">
         
+      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_4ish/scene.gltf"></a-gltf-model>
+      <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS6240.patt' ></a-marker-camera>
+    <a-entity scale="0.01 0.01 0.01">
+        
       <a-camera-static/>
     </a-scene>
 </body>
