--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf" scale="0.05 0.05 0.05">
         </a-gltf-model>
       </a-marker>
+        
+      <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS3240.patt'>
+        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_2_attempt_1/scene.gltf" scale="0.05 0.05 0.05">
+        </a-gltf-model>
+      </a-marker>
+        
       <a-entity camera></a-entity>
     </a-scene>
 </body>
