--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </a-marker>
         
       <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS4240.patt'>
-        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore2/scene.gltf" scale="0.05 0.05 0.05">
+        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_g_baked_with_texture/scene.gltf" scale="0.05 0.05 0.05">
         </a-gltf-model>
       </a-marker>
         
